--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           </div>
           <div class="accordion__item">
             <h3 class="accordion__item-title title-small">
-              Как происходит оплата?
+              Варианты оплаты?
             </h3>
 
             <p class="accordion__text text">
