--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
               <h3 class="our-contacts__item-title title-small">Телефон</h3>
 
               <a class="our-contacts__item-text text" href="tel:+74953255633"
-                >Telegram, Whatsapp +8(495)325-56-33</a
+                >+8(495)325-56-33 Telegram, Whatsapp </a
               >
             </div>
           </div>
