--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Строительство каркасных домов
           </h1>
 
-          <a class="intro__video" data-fancybox href="https://www.youtube.com/watch?v=03bO68EnWrA" >
+          <a class="intro__video" data-fancybox href="https://www.youtube.com/watch?v=n82OCD9PFE4" >
             <div class="intro__video-arrow"><svg width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="35" cy="35" r="35" fill="#FFC32D" /> <path d="M46 34.5L28.75 44.4593L28.75 24.5407L46 34.5Z" fill="white"/>
               </svg>
@@ -403,8 +403,7 @@
           </h2>
           <div class="accordion__item">
             <h3 class="accordion__item-title title-small">
-              Срок службы, долговечность каркасных зданий построенных по
-              технологии ЛСТК?
+              СРОК СЛУЖБЫ, ДОЛГОВЕЧНОСТЬ
             </h3>
 
             <p class="accordion__text text">
@@ -420,8 +419,7 @@
           
           <div class="accordion__item">
             <h3 class="accordion__item-title title-small">
-              Экологичность и защищенность от неблагоприятных факторов, например
-              грызунов?
+              ЭКОЛОГИЧНОСТЬ И ЗАЩИЩЕННОСТЬ ОТ НЕБЛАГОПРИЯТНЫХ ФАКТОРОВ
             </h3>
 
             <p class="accordion__text text">
@@ -498,7 +496,7 @@
               <h3 class="our-contacts__item-title title-small">Телефон</h3>
 
               <a class="our-contacts__item-text text" href="tel:+74953255633"
-                >+8(495)325-56-33 Telegram, Whatsapp </a
+                ><span>+8(495)325-56-33</span>  <br> Telegram, Whatsapp </a
               >
             </div>
           </div>
@@ -511,7 +509,7 @@
               <h3 class="our-contacts__item-title title-small">E-mail</h3>
 
               <a class="our-contacts__item-text text" href="#!"
-                >info@tvoikarkas.ru</a
+                ><span>info@tvoikarkas.ru</span> </a
               >
             </div>
           </div>
