--- a/index.html
+++ b/index.html
@@ -134,14 +134,7 @@
             <h3 class="about__title title">О Нашей компании</h3>
             <div class="about__text text">
               <p>
-                Мы предоставляем услуги по строительству каркасных домов,
-                коммерческих зданий, складских помещений и конструкций
-                сельхозназначения. Выполняем работы по типовым или
-                индивидуальным проектам от подготовки строительной площадки до
-                финишной отделки. Строим преимущественно на территории
-                Краснодарского края. Наличие квалифицированных сотрудников и
-                добросовестный подход к делу позволяет реализовать Ваши идеи в
-                короткие сроки и за разумные деньги!
+                «Твой Каркасный Дом» предоставляет услуги по строительству  жилых домов, коммерческих зданий, складских помещений и конструкций сельхозназначения  по технологии ЛСТК - легкие стальные тонкостенные конструкции. Мы имеем серьезный опыт в сфере каркасного строительства и всегда предлагаем оптимальные решения под заданные требования и бюджет заказчика. Выполняем  строительно- монтажные работы по типовым или индивидуальным  проектам от  подготовки строительной площадки до финишной отделки.  Строим преимущественно  на территории Краснодарского  края. Наличие квалифицированных сотрудников и добросовестный  подход к делу  позволяет  реализовать  Ваши  идеи в короткие сроки и за разумные деньги.
               </p>
               
             </div>
@@ -181,7 +174,7 @@
               </div>
               <h3 class="work__item-title title-small">Шаг 2</h3>
               <p class="work__item-text text">
-                Рассматриваем ваш проект или предлагаем свой вариант. Обсуждаем
+                Рассматриваем Ваш проект или предлагаем свой вариант. Обсуждаем
                 нюансы.
               </p>
             </div>
@@ -747,10 +740,10 @@
 
           <div class="footer__link">
             <a class="footer__social" href="#!"
-              ><img src="/images/svg/youtube3.svg" alt="youtube"
+              ><img src="/images/svg/youtube4.svg" alt="youtube"
             /></a>
             <a class="footer__social" href="#!"
-              ><img src="/images/svg/instagram3.svg" alt="instagram"
+              ><img src="/images/svg/instagram4.svg" alt="instagram"
             /></a>
           </div>
         </div>
