--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
          <!--  <h1 class="intro__title">
             Строительство каркасных домов
           </h1> -->
-
+          
           <a
             class="intro__video"
             data-fancybox
-            href="https://www.youtube.com/watch?v=n82OCD9PFE4"
+            href="https://www.youtube.com/watch?v=flOzw0E3UvI&feature=youtu.be"
           >
             <div class="intro__video-arrow">
               <svg
