--- a/index.html
+++ b/index.html
@@ -547,7 +547,8 @@
               </div>
               <h3 class="our-contacts__item-title title-small">Адрес</h3>
               <p class="our-contacts__item-text span-text text">
-                ст. Каневская <br> <span>ул. Коллективная 139</span> 
+                Краснодарский край,<br> Каневская, 
+                <br> <span>ул. Коллективная, 139</span> 
               </p>
             </div>
           </div>
